<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kaungkhantlynn.batteryinfo.MainActivity">

   <TextView
       android:id="@+id/lbl_battery_level"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/lbl_battery_level"
       android:textAppearance="?android:textAppearanceMedium"
       />

    <TextView
        android:id="@+id/battery_level"
        android:text="@string/battery_level"
        android:layout_toRightOf="@+id/lbl_battery_level"
        android:layout_toEndOf="@+id/lbl_battery_level"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_battery_status"
        android:layout_below="@+id/battery_level"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_status"
        android:textAppearance="?android:textAppearanceMedium"
        />

    <TextView
        android:id="@+id/battery_status"
        android:text="@string/battery_charge"
        android:layout_toRightOf="@+id/lbl_battery_status"
        android:layout_toEndOf="@+id/lbl_battery_status"
        android:layout_below="@+id/battery_level"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_battery_capacity"
        android:layout_below="@+id/battery_status"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_capacity"
        android:textAppearance="?android:textAppearanceMedium"
        />

    <TextView
        android:id="@+id/battery_capacity"
        android:text="34Arm"
        android:layout_toRightOf="@+id/lbl_battery_capacity"
        android:layout_toEndOf="@+id/lbl_battery_capacity"
        android:layout_below="@+id/battery_status"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_battery_remain"
        android:layout_below="@+id/battery_capacity"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_time"
        android:textAppearance="?android:textAppearanceMedium"
        />
    <TextView
        android:id="@+id/battery_remain"
        android:text="4 hours"
        android:layout_toRightOf="@+id/lbl_battery_remain"
        android:layout_toEndOf="@+id/lbl_battery_remain"
        android:layout_below="@+id/battery_capacity"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
